--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.0.6",
     "vue-lazyload": "^1.1.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
