--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-runtime": "^6.26.0",
     "better-scroll": "^1.6.2",
     "fastclick": "^1.0.6",
+    "js-base64": "^2.4.0",
     "jsonp": "^0.2.1",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.0.6",
     "vue-lazyload": "^1.1.4",
