--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-runtime": "^6.26.0",
     "better-scroll": "^1.6.2",
     "fastclick": "^1.0.6",
+    "good-storage": "^1.0.1",
     "js-base64": "^2.4.0",
     "jsonp": "^0.2.1",
     "lyric-parser": "^1.0.1",
